--- a/bible-questions.html
+++ b/bible-questions.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "bible-questions.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "jquery.museresponsive.js", "bible-questions.css"], "outOfDate":[]};
 </script>
   
   <title>Bible Questions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4284037342"/>
-  <link rel="stylesheet" type="text/css" href="css/bible-questions.css?crc=486296398" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=514636540"/>
+  <link rel="stylesheet" type="text/css" href="css/bible-questions.css?crc=4090043363" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/CGmFN65IkDQTCtfoHTNjsvLyqlBvf7khkAGqGqfxu09fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgyOd93b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/2inf5wFKzH9ahykJNuCVKNZhrai6RWN8WdslJmUMEVSfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMg1z_t3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -44,39 +44,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="381"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
-    <div class="PamphletWidget clearfix grpelem" id="pamphletu11887"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem" id="u11891"><!-- none box -->
-      <div class="popup_anchor" id="u11892popup">
-       <div class="Thumb popup_element clearfix" id="u11892"><!-- column -->
-        <div class="colelem shared_content" id="u11893" data-content-guid="u11893_content"><!-- simple frame --></div>
-        <div class="colelem shared_content" id="u11894" data-content-guid="u11894_content"><!-- simple frame --></div>
-        <div class="colelem shared_content" id="u11895" data-content-guid="u11895_content"><!-- simple frame --></div>
+    <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
+     <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
+      <div class="popup_anchor" id="u20399popup">
+       <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
+        <div class="colelem shared_content" id="u20401" data-content-guid="u20401_content"><!-- simple frame --></div>
+        <div class="colelem shared_content" id="u20402" data-content-guid="u20402_content"><!-- simple frame --></div>
+        <div class="colelem shared_content" id="u20400" data-content-guid="u20400_content"><!-- simple frame --></div>
        </div>
       </div>
      </div>
-     <div class="popup_anchor" id="u11896popup">
-      <div class="ContainerGroup clearfix" id="u11896"><!-- stack box -->
-       <div class="Container invi clearfix grpelem" id="u11897"><!-- column -->
-        <div class="clearfix colelem shared_content" id="u11904-3" data-content-guid="u11904-3_content"><!-- content -->
+     <div class="popup_anchor" id="u20403popup">
+      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
+       <div class="Container invi clearfix grpelem" id="u20404"><!-- column -->
+        <div class="clearfix colelem shared_content" id="u20416-3" data-content-guid="u20416-3_content"><!-- content -->
          <p>&nbsp;</p>
         </div>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u11900-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u11900-4_content"><!-- content --><p id="u11900-2">READINGS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u11901-4" href="sermon.html" data-href="page:U5450" data-content-guid="u11901-4_content"><!-- content --><p id="u11901-2">SERMONS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u11903-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u11903-4_content"><!-- content --><p id="u11903-2">DISCIPLESHIP</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u11902-4" href="events.html" data-href="page:U5505" data-content-guid="u11902-4_content"><!-- content --><p id="u11902-2">EVENTS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u11905-4" href="openlife.html" data-href="page:U5698" data-content-guid="u11905-4_content"><!-- content --><p id="u11905-2">OPENLIFE</p></a>
-        <div class="clearfix colelem shared_content" id="pu11906" data-content-guid="pu11906_content"><!-- group -->
-         <a class="nonblock nontext clip_frame grpelem" id="u11906" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u11907" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u11908" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u11909" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u11898" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u11899" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u20408-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u20408-4_content"><!-- content --><p id="u20408-2">READINGS</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u20410-4" href="sermon.html" data-href="page:U5450" data-content-guid="u20410-4_content"><!-- content --><p id="u20410-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u20417-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u20417-4_content"><!-- content --><p id="u20417-2">DISCIPLESHIP</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u20411-4" href="events.html" data-href="page:U5505" data-content-guid="u20411-4_content"><!-- content --><p id="u20411-2">EVENTS</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u20405-4" href="openlife.html" data-href="page:U5698" data-content-guid="u20405-4_content"><!-- content --><p id="u20405-2">OPENLIFE</p></a>
+        <a class="nonblock nontext clearfix colelem shared_content" id="u20409-4" href="featured.html" data-href="page:U19221" data-content-guid="u20409-4_content"><!-- content --><p id="u20409-2">FEATURED</p></a>
+        <div class="clearfix colelem shared_content" id="pu20414" data-content-guid="pu20414_content"><!-- group -->
+         <a class="nonblock nontext clip_frame grpelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u20407" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u20413" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
         </div>
        </div>
       </div>
      </div>
-     <div class="popup_anchor" id="u11888popup">
-      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u11888"><!-- group -->
-       <div class="grpelem shared_content" id="u11890" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9" data-content-guid="u11890_content"><!-- simple frame --></div>
-       <div class="grpelem shared_content" id="u11889" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9" data-content-guid="u11889_content"><!-- simple frame --></div>
+     <div class="popup_anchor" id="u20418popup">
+      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u20418"><!-- group -->
+       <div class="grpelem shared_content" id="u20419" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9" data-content-guid="u20419_content"><!-- simple frame --></div>
+       <div class="grpelem shared_content" id="u20420" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9" data-content-guid="u20420_content"><!-- simple frame --></div>
       </div>
      </div>
     </div>
@@ -89,44 +90,47 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="colelem" id="u6188"><!-- simple frame --></div>
     </div>
     <div class="verticalspacer shared_content" data-offset-top="77" data-content-above-spacer="88" data-content-below-spacer="81" data-content-guid="page_2_content"></div>
-    <a class="nonblock nontext clearfix grpelem shared_content" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+    <div class="clearfix grpelem shared_content" id="u5290-4" data-content-guid="u5290-4_content"><!-- content -->
+     <p id="u5290-2">RETURN HOME</p>
+    </div>
    </div>
   </div>
   <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu11887"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u11891"><!-- none box -->
-      <div class="popup_anchor temp_no_id" data-orig-id="u11892popup">
-       <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u11892"><!-- column -->
-        <span class="colelem placeholder" data-placeholder-for="u11893_content"><!-- placeholder node --></span>
-        <span class="colelem placeholder" data-placeholder-for="u11894_content"><!-- placeholder node --></span>
-        <span class="colelem placeholder" data-placeholder-for="u11895_content"><!-- placeholder node --></span>
+    <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu20396"><!-- none box -->
+     <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u20398"><!-- none box -->
+      <div class="popup_anchor temp_no_id" data-orig-id="u20399popup">
+       <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u20399"><!-- column -->
+        <span class="colelem placeholder" data-placeholder-for="u20401_content"><!-- placeholder node --></span>
+        <span class="colelem placeholder" data-placeholder-for="u20402_content"><!-- placeholder node --></span>
+        <span class="colelem placeholder" data-placeholder-for="u20400_content"><!-- placeholder node --></span>
        </div>
       </div>
      </div>
-     <div class="popup_anchor temp_no_id" data-orig-id="u11896popup">
-      <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u11896"><!-- stack box -->
-       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u11897"><!-- column -->
-        <span class="clearfix colelem placeholder" data-placeholder-for="u11904-3_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11900-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11901-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11903-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11902-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u11905-4_content"><!-- placeholder node --></span>
-        <span class="clearfix colelem placeholder" data-placeholder-for="pu11906_content"><!-- placeholder node --></span>
+     <div class="popup_anchor temp_no_id" data-orig-id="u20403popup">
+      <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u20403"><!-- stack box -->
+       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- column -->
+        <span class="clearfix colelem placeholder" data-placeholder-for="u20416-3_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20410-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20417-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20411-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20405-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20409-4_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu20414_content"><!-- placeholder node --></span>
        </div>
       </div>
      </div>
-     <div class="popup_anchor temp_no_id" data-orig-id="u11888popup">
-      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u11888"><!-- group -->
-       <span class="grpelem placeholder" data-placeholder-for="u11890_content"><!-- placeholder node --></span>
-       <span class="grpelem placeholder" data-placeholder-for="u11889_content"><!-- placeholder node --></span>
+     <div class="popup_anchor temp_no_id" data-orig-id="u20418popup">
+      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u20418"><!-- group -->
+       <span class="grpelem placeholder" data-placeholder-for="u20419_content"><!-- placeholder node --></span>
+       <span class="grpelem placeholder" data-placeholder-for="u20420_content"><!-- placeholder node --></span>
       </div>
      </div>
     </div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu18764-4_content"><!-- placeholder node --></span>
     <span class="verticalspacer placeholder" data-placeholder-for="page_2_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
   </div>
   <!-- Other scripts -->
@@ -140,7 +144,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu11887', ['#bp_infinity', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu11887 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
