--- a/sermon.html
+++ b/sermon.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3929397469"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=32874212" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=514636540"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=104692464" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/cxLFyg6FVRMJ-JX9bmYRZv6_tQ9XPMANY2GMR0YzT6jfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMg6o193b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/-5NuE9cE2fYemDAguMO9F5xECqq2gDV7y66AudfWtrwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgRV_t3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -38,50 +38,56 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="PamphletWidget clearfix grpelem" id="pamphletu11887"><!-- none box -->
-    <div class="ThumbGroup clearfix grpelem" id="u11891"><!-- none box -->
-     <div class="popup_anchor" id="u11892popup">
-      <div class="Thumb popup_element clearfix" id="u11892"><!-- column -->
-       <div class="colelem" id="u11893"><!-- simple frame --></div>
-       <div class="colelem" id="u11894"><!-- simple frame --></div>
-       <div class="colelem" id="u11895"><!-- simple frame --></div>
+   <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
+    <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
+     <div class="popup_anchor" id="u20399popup">
+      <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
+       <div class="colelem" id="u20401"><!-- simple frame --></div>
+       <div class="colelem" id="u20402"><!-- simple frame --></div>
+       <div class="colelem" id="u20400"><!-- simple frame --></div>
       </div>
      </div>
     </div>
-    <div class="popup_anchor" id="u11896popup">
-     <div class="ContainerGroup clearfix" id="u11896"><!-- stack box -->
-      <div class="Container invi clearfix grpelem" id="u11897"><!-- column -->
-       <div class="museBGSize clearfix colelem" id="u11904-3"><!-- content -->
+    <div class="popup_anchor" id="u20403popup">
+     <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
+      <div class="Container invi clearfix grpelem" id="u20404"><!-- column -->
+       <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
         <p>&nbsp;</p>
        </div>
-       <a class="nonblock nontext clearfix colelem" id="u11900-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u11900-2">READINGS</p></a>
-       <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u11901-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u11901-2">SERMONS</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u11903-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u11903-2">DISCIPLESHIP</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u11902-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u11902-2">EVENTS</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u11905-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u11905-2">OPENLIFE</p></a>
-       <div class="clearfix colelem" id="pu11906"><!-- group -->
-        <a class="nonblock nontext clip_frame grpelem" id="u11906" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u11907" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
-        <a class="nonblock nontext clip_frame grpelem" id="u11908" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u11909" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
-        <a class="nonblock nontext clip_frame grpelem" id="u11898" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u11899" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
+       <a class="nonblock nontext clearfix colelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
+       <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u20410-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u20410-2">SERMONS</p></a>
+       <a class="nonblock nontext clearfix colelem" id="u20417-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u20417-2">DISCIPLESHIP</p></a>
+       <a class="nonblock nontext clearfix colelem" id="u20411-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u20411-2">EVENTS</p></a>
+       <a class="nonblock nontext clearfix colelem" id="u20405-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u20405-2">OPENLIFE</p></a>
+       <a class="nonblock nontext clearfix colelem" id="u20409-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u20409-2">FEATURED</p></a>
+       <div class="clearfix colelem" id="pu20414"><!-- group -->
+        <a class="nonblock nontext clip_frame grpelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
+        <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u20407" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
+        <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u20413" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
        </div>
       </div>
      </div>
     </div>
-    <div class="popup_anchor" id="u11888popup">
-     <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u11888"><!-- group -->
-      <div class="grpelem" id="u11890" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-      <div class="grpelem" id="u11889" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+    <div class="popup_anchor" id="u20418popup">
+     <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u20418"><!-- group -->
+      <div class="grpelem" id="u20419" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+      <div class="grpelem" id="u20420" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
      </div>
     </div>
    </div>
    <div class="grpelem" id="u17434"><!-- custom html -->
     <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/3zlzdpi46EU' frameborder='0' allowfullscreen></iframe></div>
    </div>
-   <div class="clearfix grpelem" id="u5460"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U5457-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix grpelem" id="u5457-4" data-muse-uid="U5457" data-muse-type="txt_frame"><!-- content -->
-     <p>Barry Littleford // 25.9.2016 // Repentance</p>
+   <div class="clearfix grpelem" id="pu5460"><!-- column -->
+    <div class="clearfix colelem" id="u5460"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U5457-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u5457-4" data-muse-uid="U5457" data-muse-type="txt_frame"><!-- content -->
+      <p>Barry Littleford || 25.9.2016 || Repentance</p>
+     </div>
+     <!-- /m_editable -->
     </div>
+    <!-- m_editable region-id="editable-static-tag-U19132-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix colelem" id="u19132-4" href="https://www.youtube.com/channel/UC44DwSdF8JOYxk0Km4qw6Gw" data-muse-uid="U19132" data-muse-type="txt_frame"><!-- content --><p><span id="u19132">Click for more resources</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="grpelem" id="u17438"><!-- custom html -->
@@ -96,7 +102,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="u16695"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U16696-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link" -->
      <div class="clearfix grpelem" id="u16696-4" data-muse-uid="U16696" data-muse-type="txt_frame"><!-- content -->
-      <p>Barry Littleford // 25.9.2016 // Repentance</p>
+      <p>Barry Littleford || 25.9.2016 || Repentance</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -107,8 +113,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <p>Recent sermons from the 5pm service</p>
    </div>
    <!-- /m_editable -->
-   <div class="verticalspacer" data-offset-top="600" data-content-above-spacer="600" data-content-below-spacer="81"></div>
-   <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html#top" data-href="anchor:U775:U1260"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
+   <div class="verticalspacer" data-offset-top="641" data-content-above-spacer="640" data-content-below-spacer="80"></div>
+   <div class="rounded-corners clearfix grpelem" id="u5290-4"><!-- content -->
+    <p id="u5290-2">RETURN HOME</p>
+   </div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -121,7 +129,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu11887', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu11887 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
